--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@prisma/client": "^5.7.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/passport-local": "^1.0.38",
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
