--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "build_client": "cd frontend && yarn build && cd ..",
     "build_server": "cd backend && yarn build && cd ..",
     "build": "yarn build_client && yarn build_server",
-    "postbuild": "rm -rf backend/dist/client && mkdir \"backend/dist/client\" && cp -r frontend/dist/* \"backend/dist/client\" && cd backend && npx prisma migrate deploy && npx prisma db seed",
+    "postbuild": "rm -rf backend/dist/client && mkdir \"backend/dist/client\" && cp -r frontend/dist/* \"backend/dist/client\" && cp -r frontend/public/ backend/dist/client/ && cd backend && npx prisma migrate deploy && npx prisma db seed",
     "dev": "concurrently \"cd backend && yarn start:dev\" \"cd frontend && yarn dev --host\" \"cd backend && npx prisma studio\"",
     "start": "cd backend && yarn start:prod",
     "postinstall": "cd frontend && yarn && cd ../backend && yarn"
