fix backend/package.json : install nest-cli manually

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
-    "build": "yarn prisma migrate deploy && yarn nest build",
+    "build": "prisma migrate deploy && yarn install -g @nestjs/cli && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
